@@ -1,5 +1,10 @@
 2007-02-06  Marek Safar  <marek.safar@gmail.com>
 
+	A fix for bug #80742
+	* expression.cs: Delegate Invoke method can be called directly.
+
+2007-02-06  Marek Safar  <marek.safar@gmail.com>
+
 	A fix for bug #80676
 	* class.cs (IsEntryPoint): The Main method can have params modifier.
 
